--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -77,10 +77,6 @@ a[disabled] {
   display: none;
 }
 
-.icon {
-  width: 1em;
-}
-
 .onTop {
   z-index: 5;
 }
@@ -105,7 +101,9 @@ a[disabled] {
   }
 }
 
-.User .icon {
+.icon {
   vertical-align: middle;
-  width: .5em;
+  font-size: 18px;
+  height: 14px;
+  margin: 2px;
 }
